Assignment1: Half done

--- a/Lesson1/Points.ipynb
+++ b/Lesson1/Points.ipynb
@@ -2,167 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import shapely as shp\n",
-    "from shapely.geometry import Point, LineString, Polygon"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "POINT (5 4)\n"
+      "['__call__', '__class__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__func__', '__ge__', '__get__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__self__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__']\n",
+      "170.77501974112482\n",
+      "-10.163047539705673\n",
+      "3286.353822409777\n"
      ]
     }
    ],
    "source": [
-    "x=Point(5,4)\n",
-    "print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__builtins__',\n",
-       " '__cached__',\n",
-       " '__doc__',\n",
-       " '__file__',\n",
-       " '__loader__',\n",
-       " '__name__',\n",
-       " '__package__',\n",
-       " '__path__',\n",
-       " '__spec__',\n",
-       " '__version__',\n",
-       " 'affinity',\n",
-       " 'algorithms',\n",
-       " 'coords',\n",
-       " 'ctypes_declarations',\n",
-       " 'errors',\n",
-       " 'geometry',\n",
-       " 'geos',\n",
-       " 'impl',\n",
-       " 'linref',\n",
-       " 'predicates',\n",
-       " 'speedups',\n",
-       " 'topology']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir(shp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.7.1'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "shp.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__array_interface__',\n",
-       " '__class__',\n",
-       " '__delattr__',\n",
-       " '__dict__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__getitem__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__iter__',\n",
-       " '__le__',\n",
-       " '__len__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__p__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " '__weakref__',\n",
-       " '_cseq',\n",
-       " '_ndim',\n",
-       " '_update',\n",
-       " 'array_interface',\n",
-       " 'ctypes',\n",
-       " 'xy']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir(x.coords)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array('d', [5.0]), array('d', [4.0]))"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x.coords.xy"
+    "from shapely.geometry import Point, LineString, Polygon\n",
+    "import pyproj\n",
+    "\n",
+    "geod = pyproj.Geod(ellps='WGS84')\n",
+    "point1 = Point(2.2, 4.2)\n",
+    "point2 = Point(7.2, -25.1)\n",
+    "\n",
+    "print(dir(geod.inv))\n",
+    "angle1,angle2,distance = geod.inv(point1.x, point1.y, point2.x, point2.y)\n",
+    "\n",
+    "print(angle1)\n",
+    "print(angle2)\n",
+    "print(distance/1000)"
    ]
   },
   {
