--- a/Lesson0/01 Variable Strings and Numbers.ipynb
+++ b/Lesson0/01 Variable Strings and Numbers.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -181,20 +181,16 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'mesage' is not defined",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-7966723379c3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mmessage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"Thank you for sharing Python with the world, Guido!\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmesage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'mesage' is not defined"
-     ],
-     "output_type": "error"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thank you for sharing Python with the world, Guido!\n"
+     ]
     }
    ],
    "source": [
     "message = \"Thank you for sharing Python with the world, Guido!\"\n",
-    "print(mesage)"
+    "print(message)"
    ]
   },
   {
@@ -288,15 +284,23 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world\n"
+     ]
+    }
+   ],
    "source": [
     "# Ex 2.1 : Hello World - Variable\n",
-    "\n",
+    "message=\"Hello world\"\n",
+    "print(message)\n",
     "# put your code here"
    ]
   },
@@ -305,6 +309,9 @@
    "execution_count": 6,
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "slideshow": {
      "slide_type": "skip"
     }
@@ -358,6 +365,9 @@
    "execution_count": 7,
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -384,6 +394,9 @@
    "execution_count": 8,
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -643,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -663,8 +676,7 @@
     "last_name = 'lovelace'\n",
     "full_name = first_name + ' ' + last_name\n",
     "\n",
-    "message = full_name.title() + ' ' + \\\n",
-    "        \"was considered the world's first computer programmer.\"\n",
+    "message = full_name.title() + ' ' +\"was considered the world's first computer programmer.\"\n",
     "\n",
     "print(message)"
    ]
@@ -689,23 +701,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "String Template:  The result of the calculation of {calc} is {res}\n",
+      "String Template:  The result of the calculation of {} is {}\n",
       "The result of the calculation of (3*4)+2 is 14\n"
      ]
     }
    ],
    "source": [
-    "string_template = 'The result of the calculation of {calc} is {res}'\n",
+    "string_template = 'The result of the calculation of {} is {}'\n",
     "print(\"String Template: \", string_template)\n",
     "\n",
-    "print(string_template.format(calc='(3*4)+2', res=(3*4)+2))"
+    "print(string_template.format('(3*4)+2',(3*4)+2))"
    ]
   },
   {
@@ -1024,6 +1036,9 @@
    "execution_count": 30,
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "slideshow": {
      "slide_type": "skip"
     }
@@ -1040,6 +1055,9 @@
    "execution_count": 31,
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "slideshow": {
      "slide_type": "skip"
     }
@@ -1056,6 +1074,9 @@
    "execution_count": 32,
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "slideshow": {
      "slide_type": "skip"
     }
@@ -1072,6 +1093,9 @@
    "execution_count": 33,
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "slideshow": {
      "slide_type": "skip"
     }
@@ -1088,6 +1112,9 @@
    "execution_count": 34,
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "slideshow": {
      "slide_type": "skip"
     }
@@ -1588,6 +1615,9 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "slideshow": {
      "slide_type": "skip"
     }
@@ -1602,7 +1632,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
@@ -1636,6 +1669,9 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "slideshow": {
      "slide_type": "skip"
     }
@@ -1652,6 +1688,9 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "slideshow": {
      "slide_type": "skip"
     }
@@ -1668,6 +1707,9 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "slideshow": {
      "slide_type": "skip"
     }
@@ -1784,6 +1826,9 @@
    "execution_count": 55,
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "slideshow": {
      "slide_type": "skip"
     }
@@ -1832,6 +1877,9 @@
    "execution_count": 57,
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "slideshow": {
      "slide_type": "skip"
     }
@@ -1894,9 +1942,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.5"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
