--- a/Lesson0/05 Dictionaries.ipynb
+++ b/Lesson0/05 Dictionaries.ipynb
@@ -1239,6 +1239,9 @@
    "execution_count": 2,
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -2723,9 +2726,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.5"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
