--- a/Lesson0/06 Introduction to Functions.ipynb
+++ b/Lesson0/06 Introduction to Functions.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -293,25 +293,33 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'thank_you' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-a1b6b8373f44>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mthank_you\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Adriana'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mthank_you\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Billy'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mthank_you\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Caroline'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mthank_you\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'thank_you' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "You are doing good work, Adriana!\n",
+      "Thank you very much for your efforts on this project.\n",
+      "\n",
+      "You are doing good work, Billy!\n",
+      "Thank you very much for your efforts on this project.\n",
+      "\n",
+      "You are doing good work, Caroline!\n",
+      "Thank you very much for your efforts on this project.\n"
      ]
     }
    ],
    "source": [
-    "thank_you('Adriana')\n",
-    "thank_you('Billy')\n",
-    "thank_you('Caroline')\n",
+    "\n",
     "\n",
     "def thank_you(name):\n",
     "    # This function prints a two-line personalized thank you message.\n",
     "    print(\"\\nYou are doing good work, %s!\" % name)\n",
-    "    print(\"Thank you very much for your efforts on this project.\")"
+    "    print(\"Thank you very much for your efforts on this project.\")\n",
+    "    \n",
+    "    \n",
+    "thank_you('Adriana')\n",
+    "thank_you('Billy')\n",
+    "thank_you('Caroline')"
    ]
   },
   {
@@ -946,9 +954,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.5"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
