Assignment1: Creating geoms

--- a/Assignment1/assignment1.ipynb
+++ b/Assignment1/assignment1.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assignment 1\n",
+    "# Assignment 1   \n",
+    "#### Bakhtiyar Garashov\n",
     "\n",
     "**Working with Geometric Objects**\n",
     "\n",
@@ -56,24 +57,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importing all necessary geometry objects and libraries\n",
+    "from shapely.geometry import Point, LineString, Polygon"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POINT (2.2 4.2)\n",
-      "POINT (7.2 -25.1)\n",
-      "POINT (9.26 -2.456)\n"
+     "ename": "NameError",
+     "evalue": "name 'Point' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-0cbf04c09945>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m#function invocation\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mpoint1\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcreatePointGeom\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2.2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4.2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[0mpoint2\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcreatePointGeom\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m7.2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m25.1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mpoint3\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcreatePointGeom\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m9.26\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m2.456\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-1-0cbf04c09945>\u001b[0m in \u001b[0;36mcreatePointGeom\u001b[1;34m(x_coord, y_coord)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# function declaration\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcreatePointGeom\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_coord\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my_coord\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mpoint\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mPoint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_coord\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my_coord\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mpoint\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Point' is not defined"
      ]
     }
    ],
    "source": [
     "# createPointGeom()\n",
-    "# importing necessary geometry objects (Classes) from shapely library\n",
-    "from shapely.geometry import Point, LineString, Polygon\n",
-    "\n",
     "# function declaration\n",
     "def createPointGeom(x_coord,y_coord):\n",
     "    point=Point(x_coord,y_coord)\n",
@@ -88,23 +99,14 @@
     "#print out results\n",
     "print(point1)\n",
     "print(point2)\n",
-    "print(point3)"
+    "print(point3)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LINESTRING (2.2 4.2, 7.2 -25.1, 9.26 -2.456)\n",
-      "LINESTRING (1.8 4.6, 4.3 7.9, 0.5 9.6)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# createLineGeom()\n",
     "\n",
@@ -123,23 +125,14 @@
     "\n",
     "#print result of function\n",
     "print(line1)\n",
-    "print(line2)"
+    "print(line2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POLYGON ((2.2 4.2, 7.2 -25.1, 9.26 -2.456, 2.2 4.2))\n",
-      "POLYGON ((1.8 4.6, 4.3 7.9, 0.5 9.6, 1.8 4.6))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# createPolyGeom()\n",
     "\n",
@@ -158,7 +151,7 @@
     "\n",
     "#print result of function\n",
     "print(polygon1)\n",
-    "print(polygon2)"
+    "print(polygon2)\n"
    ]
   },
   {
@@ -185,19 +178,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POINT (2.2 4.2)\n",
-      "POINT (6.229961354035622 -11.89241115757239)\n",
-      "POINT (6.22 -7.785333333333334)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# getCentroid()\n",
     "\n",
@@ -223,18 +206,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "86.789\n",
-      "8.395\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# getArea()\n",
     "\n",
@@ -263,18 +237,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "52.46106912939557\n",
-      "62.16395199996553\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# getLength()\n",
     "\n",
@@ -357,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,10 +519,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
