Assignment1: Problem 1 and 2 done

--- a/Assignment1/assignment1.ipynb
+++ b/Assignment1/assignment1.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Assignment 1   \n",
-    "#### Bakhtiyar Garashov\n",
+    "#### Student: Bakhtiyar Garashov\n",
     "\n",
     "**Working with Geometric Objects**\n",
     "\n",
@@ -57,41 +57,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# importing all necessary geometry objects and libraries\n",
+    "# importing all of the necessary objects and libraries\n",
     "from shapely.geometry import Point, LineString, Polygon"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Point' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-0cbf04c09945>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m#function invocation\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mpoint1\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcreatePointGeom\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2.2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4.2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[0mpoint2\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcreatePointGeom\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m7.2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m25.1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mpoint3\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcreatePointGeom\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m9.26\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m2.456\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-1-0cbf04c09945>\u001b[0m in \u001b[0;36mcreatePointGeom\u001b[1;34m(x_coord, y_coord)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# function declaration\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcreatePointGeom\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_coord\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my_coord\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mpoint\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mPoint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_coord\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my_coord\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mpoint\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Point' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "POINT (2 4.2)\n",
+      "POINT (7.2 -25.1)\n",
+      "POINT (9.26 -2.456)\n"
      ]
     }
    ],
    "source": [
     "# createPointGeom()\n",
+    "\n",
     "# function declaration\n",
     "def createPointGeom(x_coord,y_coord):\n",
     "    point=Point(x_coord,y_coord)\n",
     "    return point\n",
     "\n",
-    "#function invocation\n",
-    "point1=createPointGeom(2.2,4.2)\n",
+    "# invoke functions and store results as variables\n",
+    "point1=createPointGeom(2,4.2)\n",
     "point2=createPointGeom(7.2, -25.1)\n",
     "point3=createPointGeom(9.26, -2.456)\n",
     "\n",
@@ -104,9 +102,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LINESTRING (1.8 4.6, 4.3 7.9, 0.5 9.6)\n",
+      "LINESTRING (2 4.2, 7.2 -25.1, 9.26 -2.456)\n"
+     ]
+    }
+   ],
    "source": [
     "# createLineGeom()\n",
     "\n",
@@ -119,9 +126,10 @@
     "    line = LineString(points) #if input is correct, create linestring object\n",
     "    return line # and return it\n",
     "\n",
-    "# function invocation\n",
-    "line1=createLineGeom([point1,point2,point3])\n",
-    "line2=createLineGeom([(1.8,4.6),(4.3,7.9),(0.5,9.6)])\n",
+    "# invoke function and store result as variable\n",
+    "line1=createLineGeom([(1.8,4.6),(4.3,7.9),(0.5,9.6)])\n",
+    "line2=createLineGeom([point1,point2,point3])\n",
+    "\n",
     "\n",
     "#print result of function\n",
     "print(line1)\n",
@@ -130,9 +138,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "POLYGON ((2 4.2, 7.2 -25.1, 9.26 -2.456, 2 4.2))\n",
+      "POLYGON ((0 0, 0 1, 1 1, 1 0, 0 0))\n"
+     ]
+    },
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-0.04 -0.04 1.08 1.08\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,1.0)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.0216\" opacity=\"0.6\" d=\"M 0.0,0.0 L 0.0,1.0 L 1.0,1.0 L 1.0,0.0 L 0.0,0.0 z\" /></g></svg>"
+      ],
+      "text/plain": [
+       "<shapely.geometry.polygon.Polygon at 0x1f62152c148>"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# createPolyGeom()\n",
     "\n",
@@ -147,11 +177,12 @@
     "\n",
     "# function invocation\n",
     "polygon1=createPolyGeom([point1,point2,point3])\n",
-    "polygon2=createPolyGeom([(1.8,4.6),(4.3,7.9),(0.5,9.6)])\n",
+    "polygon2=createPolyGeom([(0,0),(0,1),(1,1),(1,0)])\n",
     "\n",
     "#print result of function\n",
     "print(polygon1)\n",
-    "print(polygon2)\n"
+    "print(polygon2)\n",
+    "polygon2"
    ]
   },
   {
@@ -178,22 +209,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "POINT (2 4.2)\n",
+      "POINT (2.724104286785056 7.503445050826704)\n",
+      "POINT (6.153333333333334 -7.785333333333334)\n"
+     ]
+    }
+   ],
    "source": [
     "# getCentroid()\n",
     "\n",
     "\n",
     "# function declaration\n",
     "def getCentroid(geom_object):\n",
-    "    if hasattr(geom_object,'geom_type'):\n",
+    "    if hasattr(geom_object,'geom_type'): # if function argument has 'geom_type' attribute then it means it is a correct geom object\n",
     "        object_centroid=geom_object.centroid\n",
     "        return object_centroid\n",
     "    else:\n",
-    "        raise TypeError(\"{} is not a geometric object\".format(geom_object))\n",
+    "        raise TypeError(\"{} is not a geometric object\".format(geom_object)) # otherwise, throw exception with message\n",
+    "        return\n",
     "\n",
-    "# function invocation\n",
+    "# invoke the function\n",
     "centroid_point=getCentroid(point1)\n",
     "centroid_line=getCentroid(line1)\n",
     "centroid_poly=getCentroid(polygon1)\n",
@@ -206,23 +248,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "89.0534\n",
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
     "# getArea()\n",
     "\n",
     "# function declaration\n",
     "def getArea(geom_object):\n",
     "    if hasattr(geom_object,'geom_type'):\n",
-    "        if geom_object.geom_type=='Polygon':\n",
+    "        if geom_object.geom_type=='Polygon': # validate if the object is polygon\n",
     "            polygon_area=geom_object.area\n",
     "            return polygon_area\n",
     "        else:\n",
-    "            raise TypeError(\"Input object is not a polygon\")\n",
+    "            raise TypeError(\"Input object is not a polygon\") #if not throw exception\n",
     "            return\n",
     "    else:\n",
-    "        raise TypeError(\"Input object is not a geometric object\")\n",
+    "        raise TypeError(\"Input object is not a geometric object\") # if input is not a geom object, throw another exception\n",
     "        return\n",
     "    \n",
     "\n",
@@ -237,30 +288,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.30297996819662\n",
+      "62.34472776867281\n"
+     ]
+    }
+   ],
    "source": [
     "# getLength()\n",
     "\n",
     "# function declaration\n",
     "def getLength(geom_object):\n",
     "    if hasattr(geom_object,'geom_type'):\n",
-    "        if geom_object.geom_type in ['LineString','Polygon']: #check if input geom object is proper to get line property\n",
-    "            length=geom_object.length\n",
-    "            return length\n",
+    "        if geom_object.geom_type==\"LineString\": #check if input geom object is proper to get line property\n",
+    "            return geom_object.length\n",
+    "        elif geom_object.geom_type==\"Polygon\": # polygon.exterior.length returns length of exterior ring\n",
+    "            return geom_object.exterior.length\n",
     "        else:\n",
     "            raise Exception(\"LineString or Polygon geometry required!\") # if not, inform the user\n",
     "    else:\n",
     "        raise TypeError(\"Input object is not a geometric object\") # if the input is not a geom object show proper warning\n",
     "        return\n",
     "\n",
-    "# Below here another way of getting exterior ring length- \n",
-    "# take coords of exterior ring, make a lineString object\n",
-    "# from them and get length of it. Not a \"pythonic\" way :)\n",
-    "# leng=list(polygon2.exterior.coords)\n",
-    "# line=LineString(leng)\n",
-    "# print(line.length)\n",
+    "\n",
     "\n",
     "# function invocation\n",
     "length_line=getLength(line1)\n",
@@ -322,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,6 +577,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
