Assignment1: Task 3 completed

--- a/Lesson1/Points.ipynb
+++ b/Lesson1/Points.ipynb
@@ -2,34 +2,189 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['__call__', '__class__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__func__', '__ge__', '__get__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__self__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__']\n",
-      "170.77501974112482\n",
-      "-10.163047539705673\n",
-      "3286.353822409777\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country or area</th>\n",
+       "      <th>Urban Agglomeration</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Population_2015</th>\n",
+       "      <th>Unnamed: 5</th>\n",
+       "      <th>points</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Japan</td>\n",
+       "      <td>Tokyo</td>\n",
+       "      <td>35.689500</td>\n",
+       "      <td>139.691710</td>\n",
+       "      <td>38001018</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (139.69171 35.6895)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>India</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>28.666670</td>\n",
+       "      <td>77.216670</td>\n",
+       "      <td>25703168</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (77.21666999999999 28.66667)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>China</td>\n",
+       "      <td>Shanghai</td>\n",
+       "      <td>31.220000</td>\n",
+       "      <td>121.460000</td>\n",
+       "      <td>23740778</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (121.46 31.22)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>S?o Paulo</td>\n",
+       "      <td>-23.550000</td>\n",
+       "      <td>-46.640000</td>\n",
+       "      <td>21066245</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (-46.64 -23.55)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>India</td>\n",
+       "      <td>Mumbai (Bombay)</td>\n",
+       "      <td>19.073975</td>\n",
+       "      <td>72.880838</td>\n",
+       "      <td>21042538</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (72.880838 19.073975)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>Ciudad de México (Mexico City)</td>\n",
+       "      <td>19.427318</td>\n",
+       "      <td>-99.141869</td>\n",
+       "      <td>20998543</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (-99.141869 19.427318)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>China</td>\n",
+       "      <td>Beijing</td>\n",
+       "      <td>39.910000</td>\n",
+       "      <td>116.400000</td>\n",
+       "      <td>20383994</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (116.4 39.91)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Japan</td>\n",
+       "      <td>Kinki M.M.A. (Osaka)</td>\n",
+       "      <td>34.675834</td>\n",
+       "      <td>135.553823</td>\n",
+       "      <td>20237645</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (135.553823 34.675834)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Egypt</td>\n",
+       "      <td>Al-Qahirah (Cairo)</td>\n",
+       "      <td>30.040000</td>\n",
+       "      <td>31.240000</td>\n",
+       "      <td>18771769</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (31.24 30.04)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>New York-Newark</td>\n",
+       "      <td>40.717042</td>\n",
+       "      <td>-74.003663</td>\n",
+       "      <td>18593220</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (-74.003663 40.717042)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Country or area             Urban Agglomeration   Latitude  \\\n",
+       "0                     Japan                           Tokyo  35.689500   \n",
+       "1                     India                           Delhi  28.666670   \n",
+       "2                     China                        Shanghai  31.220000   \n",
+       "3                    Brazil                       S?o Paulo -23.550000   \n",
+       "4                     India                 Mumbai (Bombay)  19.073975   \n",
+       "5                    Mexico  Ciudad de México (Mexico City)  19.427318   \n",
+       "6                     China                         Beijing  39.910000   \n",
+       "7                     Japan            Kinki M.M.A. (Osaka)  34.675834   \n",
+       "8                     Egypt              Al-Qahirah (Cairo)  30.040000   \n",
+       "9  United States of America                 New York-Newark  40.717042   \n",
+       "\n",
+       "    Longitude  Population_2015  Unnamed: 5                              points  \n",
+       "0  139.691710         38001018         NaN           POINT (139.69171 35.6895)  \n",
+       "1   77.216670         25703168         NaN  POINT (77.21666999999999 28.66667)  \n",
+       "2  121.460000         23740778         NaN                POINT (121.46 31.22)  \n",
+       "3  -46.640000         21066245         NaN               POINT (-46.64 -23.55)  \n",
+       "4   72.880838         21042538         NaN         POINT (72.880838 19.073975)  \n",
+       "5  -99.141869         20998543         NaN        POINT (-99.141869 19.427318)  \n",
+       "6  116.400000         20383994         NaN                 POINT (116.4 39.91)  \n",
+       "7  135.553823         20237645         NaN        POINT (135.553823 34.675834)  \n",
+       "8   31.240000         18771769         NaN                 POINT (31.24 30.04)  \n",
+       "9  -74.003663         18593220         NaN        POINT (-74.003663 40.717042)  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from shapely.geometry import Point, LineString, Polygon\n",
     "import pyproj\n",
     "\n",
-    "geod = pyproj.Geod(ellps='WGS84')\n",
-    "point1 = Point(2.2, 4.2)\n",
-    "point2 = Point(7.2, -25.1)\n",
+    "import pandas as pd\n",
     "\n",
-    "print(dir(geod.inv))\n",
-    "angle1,angle2,distance = geod.inv(point1.x, point1.y, point2.x, point2.y)\n",
+    "df = pd.read_csv('global-city-population-estimates.csv', sep=';', encoding='latin1')\n",
     "\n",
-    "print(angle1)\n",
-    "print(angle2)\n",
-    "print(distance/1000)"
+    "def make_point(row):\n",
+    "    return Point(row['Longitude'], row['Latitude'])\n",
+    "\n",
+    "df['points'] = df.apply(make_point, axis=1)\n",
+    "\n",
+    "df.head(10)"
    ]
   },
   {
