--- a/Assignment1/assignment1.ipynb
+++ b/Assignment1/assignment1.ipynb
@@ -62,12 +62,13 @@
    "outputs": [],
    "source": [
     "# importing all of the necessary objects and libraries\n",
-    "from shapely.geometry import Point, LineString, Polygon"
+    "from shapely.geometry import Point, LineString, Polygon\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -148,19 +149,6 @@
       "POLYGON ((2 4.2, 7.2 -25.1, 9.26 -2.456, 2 4.2))\n",
       "POLYGON ((0 0, 0 1, 1 1, 1 0, 0 0))\n"
      ]
-    },
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-0.04 -0.04 1.08 1.08\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,1.0)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.0216\" opacity=\"0.6\" d=\"M 0.0,0.0 L 0.0,1.0 L 1.0,1.0 L 1.0,0.0 L 0.0,0.0 z\" /></g></svg>"
-      ],
-      "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x1f62152c148>"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -181,8 +169,7 @@
     "\n",
     "#print result of function\n",
     "print(polygon1)\n",
-    "print(polygon2)\n",
-    "polygon2"
+    "print(polygon2)\n"
    ]
   },
   {
@@ -209,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Problem 3: Reading coordinates from a file and creating a geometries (4 Points)\n",
+    "### Problem 3: Reading coordinates from a file and creating the geometries (4 Points)\n",
     "\n",
     "One of the \"classical\" problems in GIS is the situation where you have a\n",
     "set of coordinates in a file and you need to get them into a map (or\n",
@@ -378,11 +365,306 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Serial_Num</th>\n",
+       "      <th>year</th>\n",
+       "      <th>Basin</th>\n",
+       "      <th>Sub_basin</th>\n",
+       "      <th>Num</th>\n",
+       "      <th>Latitude_first</th>\n",
+       "      <th>Longitude_first</th>\n",
+       "      <th>Latitude_last</th>\n",
+       "      <th>Longitude_last</th>\n",
+       "      <th>ISO_time_first</th>\n",
+       "      <th>ISO_time_last</th>\n",
+       "      <th>Nature</th>\n",
+       "      <th>orig_points</th>\n",
+       "      <th>dest_points</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ADJALI</td>\n",
+       "      <td>2014319S06066</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>MM</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-6.7</td>\n",
+       "      <td>66.4</td>\n",
+       "      <td>-11.9</td>\n",
+       "      <td>51.4</td>\n",
+       "      <td>2014-11-15 06:00:00</td>\n",
+       "      <td>2014-11-24 06:00:00</td>\n",
+       "      <td>TS</td>\n",
+       "      <td>POINT (66.40000000000001 -6.7)</td>\n",
+       "      <td>POINT (51.4 -11.9)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0220142015:TWO</td>\n",
+       "      <td>2014327S08077</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>MM</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-8.0</td>\n",
+       "      <td>77.3</td>\n",
+       "      <td>-28.9</td>\n",
+       "      <td>62.5</td>\n",
+       "      <td>2014-11-23 06:00:00</td>\n",
+       "      <td>2014-12-02 00:00:00</td>\n",
+       "      <td>TS</td>\n",
+       "      <td>POINT (77.3 -8)</td>\n",
+       "      <td>POINT (62.5 -28.9)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>KATE</td>\n",
+       "      <td>2014356S08101</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>WA</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-7.5</td>\n",
+       "      <td>100.5</td>\n",
+       "      <td>-30.0</td>\n",
+       "      <td>89.6</td>\n",
+       "      <td>2014-12-21 15:00:00</td>\n",
+       "      <td>2015-01-04 12:00:00</td>\n",
+       "      <td>NR</td>\n",
+       "      <td>POINT (100.5 -7.5)</td>\n",
+       "      <td>POINT (89.59999999999999 -30)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BANSI</td>\n",
+       "      <td>2015009S19054</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>MM</td>\n",
+       "      <td>5</td>\n",
+       "      <td>-18.9</td>\n",
+       "      <td>53.9</td>\n",
+       "      <td>-30.1</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>2015-01-08 12:00:00</td>\n",
+       "      <td>2015-01-19 00:00:00</td>\n",
+       "      <td>TS</td>\n",
+       "      <td>POINT (53.9 -18.9)</td>\n",
+       "      <td>POINT (88 -30.1)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>MEKKHALA</td>\n",
+       "      <td>2015012N09146</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>WP</td>\n",
+       "      <td>MM</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>142.9</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>125.2</td>\n",
+       "      <td>2015-01-13 00:00:00</td>\n",
+       "      <td>2015-01-20 18:00:00</td>\n",
+       "      <td>TS</td>\n",
+       "      <td>POINT (142.9 8.699999999999999)</td>\n",
+       "      <td>POINT (125.2 17.3)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>CHEDZA</td>\n",
+       "      <td>2015013S18038</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>MM</td>\n",
+       "      <td>6</td>\n",
+       "      <td>-17.5</td>\n",
+       "      <td>37.6</td>\n",
+       "      <td>-40.4</td>\n",
+       "      <td>68.2</td>\n",
+       "      <td>2015-01-13 06:00:00</td>\n",
+       "      <td>2015-01-22 12:00:00</td>\n",
+       "      <td>TS</td>\n",
+       "      <td>POINT (37.6 -17.5)</td>\n",
+       "      <td>POINT (68.2 -40.4)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>NIKO</td>\n",
+       "      <td>2015020S12208</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>MM</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-13.7</td>\n",
+       "      <td>-150.7</td>\n",
+       "      <td>-26.4</td>\n",
+       "      <td>-146.5</td>\n",
+       "      <td>2015-01-20 18:00:00</td>\n",
+       "      <td>2015-01-24 00:00:00</td>\n",
+       "      <td>NR</td>\n",
+       "      <td>POINT (-150.7 -13.7)</td>\n",
+       "      <td>POINT (-146.5 -26.4)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>DIAMONDRA</td>\n",
+       "      <td>2015024S11090</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>WA</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-11.2</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>-29.8</td>\n",
+       "      <td>87.6</td>\n",
+       "      <td>2015-01-24 06:00:00</td>\n",
+       "      <td>2015-02-01 06:00:00</td>\n",
+       "      <td>TS</td>\n",
+       "      <td>POINT (90 -11.2)</td>\n",
+       "      <td>POINT (87.59999999999999 -29.8)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>EUNICE</td>\n",
+       "      <td>2015024S15078</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>MM</td>\n",
+       "      <td>8</td>\n",
+       "      <td>-15.1</td>\n",
+       "      <td>77.6</td>\n",
+       "      <td>-25.9</td>\n",
+       "      <td>88.7</td>\n",
+       "      <td>2015-01-24 06:00:00</td>\n",
+       "      <td>2015-02-02 06:00:00</td>\n",
+       "      <td>TS</td>\n",
+       "      <td>POINT (77.59999999999999 -15.1)</td>\n",
+       "      <td>POINT (88.7 -25.9)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>OLA</td>\n",
+       "      <td>2015030S16161</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>MM</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-17.5</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>-34.8</td>\n",
+       "      <td>172.7</td>\n",
+       "      <td>2015-01-30 18:00:00</td>\n",
+       "      <td>2015-02-04 12:00:00</td>\n",
+       "      <td>NR</td>\n",
+       "      <td>POINT (160 -17.5)</td>\n",
+       "      <td>POINT (172.7 -34.8)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Name     Serial_Num  year Basin Sub_basin  Num  Latitude_first  \\\n",
+       "0          ADJALI  2014319S06066  2015    SI        MM    1            -6.7   \n",
+       "1  0220142015:TWO  2014327S08077  2015    SI        MM    2            -8.0   \n",
+       "2            KATE  2014356S08101  2015    SI        WA    4            -7.5   \n",
+       "3           BANSI  2015009S19054  2015    SI        MM    5           -18.9   \n",
+       "4        MEKKHALA  2015012N09146  2015    WP        MM    1             8.7   \n",
+       "5          CHEDZA  2015013S18038  2015    SI        MM    6           -17.5   \n",
+       "6            NIKO  2015020S12208  2015    SP        MM    1           -13.7   \n",
+       "7       DIAMONDRA  2015024S11090  2015    SI        WA    7           -11.2   \n",
+       "8          EUNICE  2015024S15078  2015    SI        MM    8           -15.1   \n",
+       "9             OLA  2015030S16161  2015    SP        MM    2           -17.5   \n",
+       "\n",
+       "   Longitude_first  Latitude_last  Longitude_last       ISO_time_first  \\\n",
+       "0             66.4          -11.9            51.4  2014-11-15 06:00:00   \n",
+       "1             77.3          -28.9            62.5  2014-11-23 06:00:00   \n",
+       "2            100.5          -30.0            89.6  2014-12-21 15:00:00   \n",
+       "3             53.9          -30.1            88.0  2015-01-08 12:00:00   \n",
+       "4            142.9           17.3           125.2  2015-01-13 00:00:00   \n",
+       "5             37.6          -40.4            68.2  2015-01-13 06:00:00   \n",
+       "6           -150.7          -26.4          -146.5  2015-01-20 18:00:00   \n",
+       "7             90.0          -29.8            87.6  2015-01-24 06:00:00   \n",
+       "8             77.6          -25.9            88.7  2015-01-24 06:00:00   \n",
+       "9            160.0          -34.8           172.7  2015-01-30 18:00:00   \n",
+       "\n",
+       "         ISO_time_last Nature                      orig_points  \\\n",
+       "0  2014-11-24 06:00:00     TS   POINT (66.40000000000001 -6.7)   \n",
+       "1  2014-12-02 00:00:00     TS                  POINT (77.3 -8)   \n",
+       "2  2015-01-04 12:00:00     NR               POINT (100.5 -7.5)   \n",
+       "3  2015-01-19 00:00:00     TS               POINT (53.9 -18.9)   \n",
+       "4  2015-01-20 18:00:00     TS  POINT (142.9 8.699999999999999)   \n",
+       "5  2015-01-22 12:00:00     TS               POINT (37.6 -17.5)   \n",
+       "6  2015-01-24 00:00:00     NR             POINT (-150.7 -13.7)   \n",
+       "7  2015-02-01 06:00:00     TS                 POINT (90 -11.2)   \n",
+       "8  2015-02-02 06:00:00     TS  POINT (77.59999999999999 -15.1)   \n",
+       "9  2015-02-04 12:00:00     NR                POINT (160 -17.5)   \n",
+       "\n",
+       "                       dest_points  \n",
+       "0               POINT (51.4 -11.9)  \n",
+       "1               POINT (62.5 -28.9)  \n",
+       "2    POINT (89.59999999999999 -30)  \n",
+       "3                 POINT (88 -30.1)  \n",
+       "4               POINT (125.2 17.3)  \n",
+       "5               POINT (68.2 -40.4)  \n",
+       "6             POINT (-146.5 -26.4)  \n",
+       "7  POINT (87.59999999999999 -29.8)  \n",
+       "8               POINT (88.7 -25.9)  \n",
+       "9              POINT (172.7 -34.8)  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# load csv into pandas dataframe ... etc"
+    "# load csv into pandas dataframe ... etc\n",
+    "\n",
+    "# declare functions that creates point geom objects from appropriate columns\n",
+    "def make_origin_point(row):\n",
+    "    return Point(row['Longitude_first'], row['Latitude_first'])\n",
+    "\n",
+    "def make_destination_point(row):\n",
+    "    return Point(row['Longitude_last'], row['Latitude_last'])\n",
+    "\n",
+    "# reading data from csv and making pandas dataframe object\n",
+    "df = pd.read_csv('Years.2015-2017.ibtracs_wmo.storms.csv', header=0, sep=',', encoding='latin1')\n",
+    "\n",
+    "# apply make_origin_point function to make origin points and add them to column\n",
+    "df['orig_points']=df.apply(make_origin_point, axis=1)\n",
+    "# apply make_destination_point function to make destination points and add them to column\n",
+    "df['dest_points']=df.apply(make_destination_point, axis=1)\n",
+    "\n",
+    "df.head(10)\n"
    ]
   },
   {
