--- a/Assignment1/assignment1.ipynb
+++ b/Assignment1/assignment1.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Assignment 1   \n",
-    "#### Student: Bakhtiyar Garashov\n",
+    "#### Student: Bakhtiyar Garashov \n",
+    "##### Check the [github](https://github.com/Bakhtiyar-Garashov/GeoPython2020/blob/master/Assignment1/assignment1.ipynb) link to find repo\n",
     "\n",
     "**Working with Geometric Objects**\n",
     "\n",
