--- a/Assignment2/assignment2.ipynb
+++ b/Assignment2/assignment2.ipynb
@@ -297,7 +297,7 @@
     "- load world countries shapefile, reproject into same CRS and plot together with storm paths\n",
     "- Calculate the lenghts of the storm lines into a new column called ``distance`` in ``movements`` GeoDataFrame.\n",
     "\n",
-    "2. Calculate the storm path distances again based on the EPSG:3857 https://epsg.io/3857 web mercator -projection? What do you observe?"
+    "2. Calculate the storm path distances again based on the EPSG:3857 https://epsg.io/3857 web mercator -projection? What do you observe? Distances increased"
    ]
   },
   {
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,10 +1024,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Miniconda3\\envs\\geopy2020\\lib\\site-packages\\ipykernel_launcher.py:11: UserWarning: CRS mismatch between the CRS of left geometries and the CRS of right geometries.\n",
+      "Use `to_crs()` to reproject one of the input geometries to match the CRS of the other.\n",
+      "\n",
+      "Left CRS: EPSG:4326\n",
+      "Right CRS: +init=epsg:4326 +no_defs +type=crs\n",
+      "\n",
+      "  # This is added back by InteractiveShellApp.init_path()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is the list of storm ids made landfall in USA\n",
+      "2015126N27281\n",
+      "2015167N27266\n",
+      "2016242N24279\n",
+      "2016257N27280\n",
+      "2016158N22272\n",
+      "2016148N27288\n",
+      "2016273N13300\n"
+     ]
+    }
+   ],
+   "source": [
+    "# optional task. Find which storms made landfall\n",
+    "from geopandas.tools import sjoin\n",
+    "from shapely.geometry import MultiPoint\n",
+    "\n",
+    "movements=movements.to_crs(\"EPSG:4326\")\n",
+    "world_lowres=world_lowres.to_crs(\"EPSG:4326\")\n",
+    "\n",
+    "\n",
+    "USA_area=world_lowres.loc[world_lowres['name']=='United States of America']\n",
+    "\n",
+    "points=sjoin(USA_area,geo_data,how='left')\n",
+    "\n",
+    "USA_storms=points['Serial_Num'].unique()\n",
+    "\n",
+    "print(\"Here is the list of storm ids made landfall in USA\")\n",
+    "for i in USA_storms:\n",
+    "    print(i)\n",
+    "    \n",
+    "# define customized centered crs\n",
+    "\n",
+    "p = MultiPoint([v for v in geo_data['geometry'].values]).centroid\n",
+    "\n",
+    "proj4_txt = '+proj=aeqd +lat_0={} +lon_0={} +x_0=0 +y_0=0 +ellps=WGS84 +datum=WGS84 +units=m +no_defs'.format(p.y, p.x)\n",
+    "projected_geo_data = geo_data.to_crs(proj4_txt)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
